--- a/demo/demo/index.html
+++ b/demo/demo/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.3
     </script>
-    <title>anuo book</title>
+    <title>&#x7EC4;&#x4EF6;&#x6E32;&#x67D3;</title>
   </head>
   <body>
     <div id="root"></div>
