--- a/study/http/simple-http-protocol/index.html
+++ b/study/http/simple-http-protocol/index.html
@@ -18,9 +18,7 @@
     <script>
       //! umi version: 3.2.3
     </script>
-    <title>
-      &#x7F51;&#x7EDC;&#x57FA;&#x7840;-&#x5404;&#x4E2A;&#x534F;&#x8BAE;&#x7684;&#x5173;&#x7CFB;
-    </title>
+    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
   </head>
   <body>
     <div id="root"></div>
