deploy: 61fc232e277634fa3ff035fcc8377ed5300b1942

--- a/study/images/canvas-joint/index.html
+++ b/study/images/canvas-joint/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.6
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>canvas&#x62FC;&#x63A5;&#x957F;&#x56FE;</title>
   </head>
   <body>
     <div id="root"></div>
