--- a/share/github-pages/github-pages-first/index.html
+++ b/share/github-pages/github-pages-first/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.6
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>1.&#x4F7F;&#x7528;GitHubPages&#x53D1;&#x5E03;&#x9879;&#x76EE;</title>
   </head>
   <body>
     <div id="root"></div>
