--- a/share/github-pages/github-pages-two/index.html
+++ b/share/github-pages/github-pages-two/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.6
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>2.&#x4F7F;&#x7528;gh-pages&#x624B;&#x52A8;&#x53D1;&#x5E03;</title>
   </head>
   <body>
     <div id="root"></div>
