--- a/share/github-pages/workflow/index.html
+++ b/share/github-pages/workflow/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.6
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>workflow&#xFF08;.yml&#xFF09;&#x6587;&#x4EF6;&#x914D;&#x7F6E;</title>
   </head>
   <body>
     <div id="root"></div>
