--- a/study/http/http-header/index.html
+++ b/study/http/http-header/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.6
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>HTTP &#x9996;&#x90E8;&#xFF08;&#x54CD;&#x5E94;&#x5934;&#xFF09;</title>
   </head>
   <body>
     <div id="root"></div>
