deploy: 53ab69dbf3b5564714192071d0db21d487fb3678

--- a/share/images/index.html
+++ b/share/images/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.6
+      //! umi version: 3.2.7
     </script>
-    <title>canvas&#x62FC;&#x63A5;&#x957F;&#x56FE;</title>
+    <title>anuo book</title>
   </head>
   <body>
     <div id="root"></div>
