deploy: 78326e7b69ea3cc16608cfe531ad09a9efe88bbe

--- a/share/git/manage-account-info/index.html
+++ b/share/git/manage-account-info/index.html
@@ -18,9 +18,7 @@
     <script>
       //! umi version: 3.2.10
     </script>
-    <title>
-      &#x7F51;&#x7EDC;&#x57FA;&#x7840;-&#x5404;&#x4E2A;&#x534F;&#x8BAE;&#x7684;&#x5173;&#x7CFB;
-    </title>
+    <title>&#x4FEE;&#x6539;git&#x8D26;&#x53F7;</title>
   </head>
   <body>
     <div id="root"></div>
