--- a/share/git/vim-change-commit/index.html
+++ b/share/git/vim-change-commit/index.html
@@ -19,7 +19,7 @@
       //! umi version: 3.2.10
     </script>
     <title>
-      &#x7F51;&#x7EDC;&#x57FA;&#x7840;-&#x5404;&#x4E2A;&#x534F;&#x8BAE;&#x7684;&#x5173;&#x7CFB;
+      &#x8FDB;&#x5165;vim&#x754C;&#x9762;&#x4FEE;&#x6539;commit&#x4FE1;&#x606F;
     </title>
   </head>
   <body>
