--- a/share/images/index.html
+++ b/share/images/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.7
+      //! umi version: 3.2.10
     </script>
-    <title>anuo book</title>
+    <title>Index</title>
   </head>
   <body>
     <div id="root"></div>
