deploy: d89776bd13a7c0f09be1a26768197b5347c7d156

--- a/share/git/create-repository/index.html
+++ b/share/git/create-repository/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>&#x521B;&#x5EFA;&#x4ED3;&#x5E93;</title>
+    <title>创建仓库</title>
   </head>
   <body>
     <div id="root"></div>
