--- a/share/git/manage-account-info/index.html
+++ b/share/git/manage-account-info/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>&#x4FEE;&#x6539;git&#x8D26;&#x53F7;</title>
+    <title>修改git账号</title>
   </head>
   <body>
     <div id="root"></div>
