--- a/share/git/stash/index.html
+++ b/share/git/stash/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>git-stash&#x7528;&#x6CD5;</title>
+    <title>git-stash用法</title>
   </head>
   <body>
     <div id="root"></div>
