--- a/share/git/vim-change-commit/index.html
+++ b/share/git/vim-change-commit/index.html
@@ -16,11 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>
-      &#x8FDB;&#x5165;vim&#x754C;&#x9762;&#x4FEE;&#x6539;commit&#x4FE1;&#x606F;
-    </title>
+    <title>进入vim界面修改commit信息</title>
   </head>
   <body>
     <div id="root"></div>
