--- a/share/github-pages/github-pages-first/index.html
+++ b/share/github-pages/github-pages-first/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>1.&#x4F7F;&#x7528;GitHubPages&#x53D1;&#x5E03;&#x9879;&#x76EE;</title>
+    <title>1.使用GitHubPages发布项目</title>
   </head>
   <body>
     <div id="root"></div>
