--- a/share/github-pages/github-pages-three/index.html
+++ b/share/github-pages/github-pages-three/index.html
@@ -16,11 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>
-      3.&#x4F7F;&#x7528;github-actions&#x81EA;&#x52A8;&#x53D1;&#x5E03;
-    </title>
+    <title>3.使用github-actions自动发布</title>
   </head>
   <body>
     <div id="root"></div>
