--- a/share/github-pages/github-pages-two/index.html
+++ b/share/github-pages/github-pages-two/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>2.&#x4F7F;&#x7528;gh-pages&#x624B;&#x52A8;&#x53D1;&#x5E03;</title>
+    <title>2.使用gh-pages手动发布</title>
   </head>
   <body>
     <div id="root"></div>
