--- a/share/github-pages/workflow/index.html
+++ b/share/github-pages/workflow/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>workflow&#xFF08;.yml&#xFF09;&#x6587;&#x4EF6;&#x914D;&#x7F6E;</title>
+    <title>workflow（.yml）文件配置</title>
   </head>
   <body>
     <div id="root"></div>
