--- a/study/http/http-header/index.html
+++ b/study/http/http-header/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>HTTP &#x9996;&#x90E8;&#xFF08;&#x54CD;&#x5E94;&#x5934;&#xFF09;</title>
+    <title>HTTP 首部（响应头）</title>
   </head>
   <body>
     <div id="root"></div>
