--- a/study/http/simple-http-protocol/index.html
+++ b/study/http/simple-http-protocol/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>&#x7B80;&#x5355;&#x7684;HTTP</title>
+    <title>简单的HTTP</title>
   </head>
   <body>
     <div id="root"></div>
