--- a/study/http/web-and-network-basics/index.html
+++ b/study/http/web-and-network-basics/index.html
@@ -16,11 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>
-      &#x7F51;&#x7EDC;&#x57FA;&#x7840;-&#x5404;&#x4E2A;&#x534F;&#x8BAE;&#x7684;&#x5173;&#x7CFB;
-    </title>
+    <title>网络基础-各个协议的关系</title>
   </head>
   <body>
     <div id="root"></div>
