--- a/study/js/file-reader/file-reader/index.html
+++ b/study/js/file-reader/file-reader/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.23
     </script>
-    <title>link</title>
+    <title>FileReader</title>
   </head>
   <body>
     <div id="root"></div>
