--- a/demo/demo/index.html
+++ b/demo/demo/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>&#x7EC4;&#x4EF6;&#x6E32;&#x67D3;</title>
+    <title>组件渲染</title>
   </head>
   <body>
     <div id="root"></div>
