--- a/share/images/canvas-joint/index.html
+++ b/share/images/canvas-joint/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>canvas&#x62FC;&#x63A5;&#x957F;&#x56FE;</title>
+    <title>canvas拼接长图</title>
   </head>
   <body>
     <div id="root"></div>
