--- a/study/js/file-reader/upload-file/index.html
+++ b/study/js/file-reader/upload-file/index.html
@@ -16,9 +16,9 @@
       window.routerBase = "/anuo-mini-book";
     </script>
     <script>
-      //! umi version: 3.2.10
+      //! umi version: 3.2.23
     </script>
-    <title>Object</title>
+    <title>上传文件</title>
   </head>
   <body>
     <div id="root"></div>
