--- a/study/js/even-loop/index.html
+++ b/study/js/even-loop/index.html
@@ -18,7 +18,7 @@
     <script>
       //! umi version: 3.2.25
     </script>
-    <title>workflow（.yml）文件配置</title>
+    <title>事件循环</title>
   </head>
   <body>
     <div id="root"></div>
